# 3d-game-shaders-for-beginners

./: .gitignore
demonstration/: CMakeLists.txt
demonstration/src/: main.cxx
